--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <h2>Primeira versao</h2>
                 <p>A primeira tentativa de criar um mascote foi em 2007 e veio de um desenvolvedor chamado Dan Morril. Ele conta que abriu o inkscape. (software livre para cetorizaçao de imagens ) e criou sua propria versao do robo. O objetivo era apenas personificar o sitema para a sua equipe, não existia nenhuma solicitaçãao da empresa para a criação de um mascote</p>
                 <img src="dandoids.png" id="img1">
-                <p> Essa primeira versaao bizzara até foi batizada em homenagem ao seu criador: seriam os Dandroids. </p>
+                <p> Essa primeira versao bizzara até foi batizada em homenagem ao seu criador: seriam os Dandroids. </p>
 
             </article>
             <article>
