--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
             </article>
             <article>
                 <h2> Surge um novo mascote</h2>
-               <p> A ideia de ter um mascote foi amadurecendo e a missão foi passada para a uma profissional da área. A ilustradora Russa <strong><a href="https://en.wikipedia.org/wiki/Irina_Blok" target="_blank">Irina Blok</a></strong>. Também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
-                <img src="irina.jpg">
+               <p> A ideia de ter um mascote foi amadurecendo e a missão foi passada para a uma profissional da área. A ilustradora Russa <strong><a href="https://en.wikipedia.org/wiki/Irina_Blok " target="_blank">Irina Blok</a></strong>. Também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+                <img src="irina.jpg" id="img4">
                <p> A ideia principal de Irina era representar tudo graficamente com poucos traços e de uma forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong><a href="https://www.tecmundo.com.br/android/46241-android-a-historia-da-logo-do-robozinho-mais-famoso-do-mundo-ilustracao-.htm" target="_blank">Bugdroid</a></strong>. O novo mascote do Android.</p>
                <img src="android.jpg" id="img2">
-               <p> A Principal inspiraração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata:simples, limpo, objetivo.</p>
+               <p> A Principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata:simples, limpo, objetivo.</p>
             </article>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="img3" ></iframe>
 
